Portfolio evaluation 1. Implemented: periodically started service that calculates portfolio valuation at the end of the previous day. 2. Added to settings fragment: Selector at what time user wants (if so) to receive daily notification about portfolio state. 3. SharedPreferences were switched to Kotlin delegates scheme. 4. InfoFragment tags & links switched to FlexBox, icons added to known links types. 5. Link Stat added 6. Ai chat switched to RecyclerView with 2 types of ViewHolders: for in and out messages. 7. Added Firebase Crashlytics and Performance Monitor. 8. View - ViewModel relations cleaned for all fragments and MainActivity. 9. TechIndicators are now uniform, extend TechInd abstract class. Tech indicators switchers are in the Flexbox. 10. Notification service reworked, NotificationData implemented to construct notifications. 11. AlarmScheduler implemented to schedule different actions (program start services, BroadcastReceivers etc.) AlarmData is used to set alarms. 12. Links icons tweaked a bit. 13. Cleanup 14. Implemented calculation of portfolio daily change/percent change/cumulative after evaluation. 15. Binance fragment tweaked. Volume added. 16. Ai Report fragment reworked following the changes in TokenMetrics API